# inure-bot

./: README.md  main.py  pyproject.toml
.github/workflows/: python-app.yml
backend/: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json  run.py
backend/app/: database.py  main.py  models.py
backend/bot/signal/: signal_bot.py
backend/bot/trade/: trade_bot.py
backend/tests/: __init__.py  conftest.py  test_app.py
docs/: xx-API-Endpoints.md  xx-GitHub-Actions-Workflow-Triggers.md  xx-Roadmap.md  xx-Tech-Stack.md
typings/: pytest.pyi
