[project]
name = "inure-bot"
version = "0.1.0"
description = "Crypto Trading Bot"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.27.0",
    "sqlmodel>=0.0.14",
    "pydantic>=2.5.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "python-telegram-bot>=20.7",
]
